Abeyant analysis of GLMM and add ANOVA by terms

--- a/Data_Analysis_Script.Rmd
+++ b/Data_Analysis_Script.Rmd
@@ -1456,14 +1456,19 @@ rda_scores_gt<-gt(rda_scores)
 rda_scores_gt
 ###############Check significance of RDA model##############
 #Check the significance by axis
+set.seed(123)
 rda_aov<-anova.cca(rda_mod, by='axis',
-                   permutations = how(nperm=5000))
+                   permutations = how(nperm=999))
 rda_aov
 #Significance at RDA1
 
+#Check significance by terms
+rda_aov_term<-anova.cca(rda_mod, by='term',
+          step=999)
+rda_aov_term
 
 #Check significance of the whole constrained model
-rda_aov_all<-anova.cca(rda_mod,permutations = how(nperm=5000)) #Show overall significance
+rda_aov_all<-anova.cca(rda_mod,permutations = how(nperm=999)) #Show overall significance
 rda_aov_all
 
 #Significantly tells the variation
@@ -1520,572 +1525,4 @@ varpart_gt
 
 
 ```
-
-## Generalized linear mixed effect models (GLMM) ##
-
-Using GLMM to further confirm the relationships.
-
-```{r scatter plots}
-####################prepare tables for modelling##################################
-library(glmmTMB)
-library(buildmer)
-library(lme4)
-library(ggplot2)
-library(tidyr)
-
-f<-which(colSums(comp_sub_metrics[,3:30]==0)<0.5*nrow(comp_sub_metrics)) #dplyr::select categories with sparsity < 0.5
-
-colnames(comp_sub_metrics)[31:54]<-c('S4', 'T4', 'V4', 'S32', 'T32',
-                                     'V32', 'PROC4', 'PLC4', 'PROC32',
-                                     'PLC32', 'S16', 'T16', 'V16', 'PROC16',
-                                     'PLC16', 'D64', 'SC', 'D1_2', 'D2_4', 'D4_8', 'D8_16',
-                                     'D16_32', 'D32_64', 'Sq')
-
-glmm_table1<-comp_sub_metrics[,c(2,f+2, 33)]
-glmm_table1$region<-as.factor(glmm_table1$region)
-col_names<-c('Region', 'Arborescent HC','Bushy HC', 'Encrusting HC',
-  'Foliose HC', 'Massive HC', 'Digitate OC',
-  'Lobate OC', 'TU', 'Bushy OC',
-  'Encrusting ZO', 'Massive ZO', 'CCA', 'BSS', 'MA',
-  'US')
-
-
-#PROC32
-glmm_table2<-comp_sub_metrics[,c(2,f+2, 39)]
-glmm_table2[2:15]<-glmm_table2[2:15]
-#colnames(glmm_table2)[1:16]<-col_names
-
-
-#PLC4
-glmm_table12<-comp_sub_metrics[,c(2,f+2, 38)]
-glmm_table12[2:15]<-glmm_table12[2:15]
-
-
-#PLC16
-glmm_table4<-comp_sub_metrics[,c(2,f+2, 45)]
-glmm_table4[2:15]<-glmm_table4[2:15]
-
-#PLC32
-glmm_table3<-comp_sub_metrics[,c(2,f+2, 40)]
-glmm_table3[2:15]<-glmm_table3[2:15]
-
-#D12
-glmm_table5<-comp_sub_metrics[,c(2,f+2, 48)]
-glmm_table5[2:15]<-glmm_table5[2:15]
-
-#D2_4
-glmm_table6<-comp_sub_metrics[,c(2,f+2, 49)]
-glmm_table6[2:15]<-glmm_table6[2:15]
-
-#D8_16
-glmm_table8<-comp_sub_metrics[,c(2,f+2, 51)]
-glmm_table8[2:15]<-glmm_table8[2:15]
-
-#D16_32
-glmm_table9<-comp_sub_metrics[,c(2,f+2, 52)]
-glmm_table9[2:15]<-glmm_table9[2:15]
-
-#D32_64
-glmm_table10<-comp_sub_metrics[,c(2,f+2, 53)]
-glmm_table10[2:15]<-glmm_table10[2:15]
-
-#Sq
-glmm_table11<-comp_sub_metrics[,c(2,f+2, 54)]
-glmm_table11[2:15]<-glmm_table11[2:15]
-
-
-```
-
-
-```{r GLMM, message = F, warning = F, echo=T, results='hide'}
-########################################GLMM########################################
-#################################vif prior to modelling######################################
-library(dplyr)
-library(usdm)
-glmm_vif_table<-dplyr::select(glmm_table11,hcarb, hcbus,hcenc,hcfol,
-                       hcmas, zoaenc,zoamas, ocdig,oclob, ocbus,ma, fil, cru_or_spoenc, us)
-vifstep(glmm_vif_table) #oclob and zoaenc are removed
-
-
-###################GLMM    modelling###################################################
-#####################################################################
-colnames(glmm_table1)[17]<-'V4'
-V4_glmm<-buildglmmTMB(V4~hcarb+hcbus+hcenc+hcfol+hcmas+zoamas+ocbus+ocdig+
-                        fil+cru_or_spoenc+ma+us+(1|region), 
-                      data=glmm_table1, family=gaussian(),
-                      buildmerControl = list(include = ~ (1|region), direction='forward'))
-
-V4_mod_sum<-summary(V4_glmm)
-
-
-
-colnames(glmm_table12)[c(1,17)]<-c('region','PLC4')
-
-PLC4_glmm<-buildglmmTMB(PLC4~hcarb+hcbus+hcenc+hcfol+hcmas+zoamas+ocbus+ocdig+
-                          fil+cru_or_spoenc+ma+us+(1|region), 
-                        data=glmm_table12, family=gaussian(),
-                        buildmerControl = list(include = ~ (1|region), direction='forward'))
-PLC4_mod_sum<-summary(PLC4_glmm)
-#plot(PLC4_glmm)
-
-
-colnames(glmm_table4)[17]<-'PLC16'
-PLC16_glmm<-buildglmmTMB(PLC16~hcarb+hcbus+hcenc+hcfol+hcmas+zoamas+ocbus+ocdig+
-                           fil+cru_or_spoenc+ma+us+(1|region), 
-                         data=glmm_table4, family=Gamma('log'),
-                         buildmerControl = list(include = ~ (1|region), direction='forward'))
-PLC16_mod_sum<-summary(PLC16_glmm)
-#plot(PLC32_glmm)
-
-
-colnames(glmm_table3)[17]<-'PLC32'
-PLC32_glmm<-buildglmmTMB(PLC32~hcarb+hcbus+hcenc+hcfol+hcmas+zoamas+ocbus+ocdig+
-                           fil+cru_or_spoenc+ma+us+(1|region), 
-                         data=glmm_table3, family=gaussian(),
-                         buildmerControl = list(include = ~ (1|region), direction='forward'))
-PLC32_mod_sum<-summary(PLC32_glmm)
-#plot(PLC32_glmm)
-
-
-colnames(glmm_table5)[17]<-'D1_2'
-D12_glmm<-buildglmmTMB(D1_2~hcarb+hcbus+hcenc+hcfol+hcmas+zoamas+ocbus+ocdig+
-                         fil+cru_or_spoenc+ma+us+(1|region), 
-                       data=glmm_table5, family=Gamma('log'),
-                       buildmerControl = list(include = ~ (1|region), direction='forward'))
-D12_mod_sum<-summary(D12_glmm)
-#plot(D12_glmm)
-
-
-colnames(glmm_table6)[17]<-'D2_4'
-D24_glmm<-buildglmmTMB(D2_4~hcarb+hcbus+hcenc+hcfol+hcmas+zoamas+ocbus+ocdig+
-                         fil+cru_or_spoenc+ma+us+(1|region), 
-                       data=glmm_table6, family=Gamma('log'),
-                       buildmerControl = list(include = ~ (1|region), direction='forward'))
-D24_mod_sum<-summary(D24_glmm)
-
-
-
-
-colnames(glmm_table8)[17]<-'D8_16'
-D816_glmm<-buildglmmTMB(D8_16~hcarb+hcbus+hcenc+hcfol+hcmas+zoamas+ocbus+ocdig+
-                          fil+cru_or_spoenc+ma+us+(1|region), 
-                        data=glmm_table8, family=Gamma('log'),
-                        buildmerControl = list(include = ~ (1|region), direction='forward'))
-D816_mod_sum<-summary(D816_glmm)
-
-
-colnames(glmm_table9)[17]<-'D16_32'
-D1632_glmm<-buildglmmTMB(D16_32~hcarb+hcbus+hcenc+hcfol+hcmas+zoamas+ocbus+ocdig+
-                           fil+cru_or_spoenc+ma+us+(1|region), 
-                         data=glmm_table9, family=gaussian(),
-                         buildmerControl = list(include = ~ (1|region), direction='forward'))
-D1632_mod_sum<-summary(D1632_glmm)
-#plot(D1632_glmm)
-
-
-colnames(glmm_table10)[17]<-'D32_64'
-D3264_glmm<-buildglmmTMB(D32_64~hcarb+hcbus+hcenc+hcfol+hcmas+zoamas+ocbus+ocdig+
-                           fil+cru_or_spoenc+ma+us+(1|region), 
-                         data=glmm_table10, family=gaussian(),
-                         buildmerControl = list(include = ~ (1|region), direction='forward'))
-D3264_mod_sum<-summary(D3264_glmm)
-
-
-colnames(glmm_table11)[17]<-'Sq'
-VRSD_glmm<-buildglmmTMB(Sq~hcarb+hcbus+hcenc+hcfol+hcmas+zoamas+ocbus+ocdig+
-                          fil+cru_or_spoenc+ma+us+(1|region), 
-                        data=glmm_table11, family=gaussian(),
-                        buildmerControl = list(include = ~ (1|region), direction='forward'))
-VRSD_mod_sum<-summary(VRSD_glmm) # No benthic variables can significantly explain Sq
-
-colnames(glmm_table2)[17]<-'PROC32'
-PROC32_glmm<-buildglmmTMB(PROC32~hcarb+hcbus+hcenc+hcfol+hcmas+zoamas+ocbus+ocdig+
-                            fil+cru_or_spoenc+ma+us+(1|region), 
-                          data=glmm_table2, family=Gamma('log'),
-                          buildmerControl = list(include = ~ (1|region)))
-
-PROC32_mod_sum<-summary(PROC32_glmm)
-```
-
-```{r show GLMM coefficients, warning =F, message=F}
-###########Show coefficients#########################
-
-library(broom.mixed)
-library(dotwhisker)
-
-V4_mod<-glmmTMB(V4_mod_sum$call$formula,data=glmm_table1,family=gaussian())
-V4_mod_sum<-summary(V4_mod)
-
-V4_coef<-dwplot(V4_mod, effects='fixed',whisker_args = list(color = "blue"),
-                dot_args = list(color = "black") )+
-  geom_vline(xintercept=0,lty=2)+
-  scale_y_discrete(labels=c('hcbus'='Bushy HC',
-                            'fil'='TU',
-                            'ocbus' = 'Bushy OC',
-                            'cru_or_spoenc' = 'CCA',
-                            'hcarb' = 'Arborescent HC',
-                            'zoamas' = 'Massive ZO'))
-
-
-
-PROC32_mod<-glmmTMB(PROC32_mod_sum$call$formula,data=glmm_table2,family=Gamma('log'))
-PROC32_mod_sum<-summary(PROC32_mod)
-PROC32_coef<-dwplot(PROC32_mod, effects='fixed',whisker_args = list(color = "red"),
-                    dot_args = list(color = "black"))+geom_vline(xintercept=0,lty=2)+
- scale_y_discrete(labels=c('cru_or_spoenc' = 'CCA',
-                           'hcmas' = 'Massive HC',
-                           'fil' = 'TU'))
-
-PLC4_mod<-glmmTMB(PLC4_mod_sum$call$formula,data=glmm_table12,family=gaussian())
-
-PLC4_mod_sum<-summary(PLC4_mod)
-
-PLC4_coef<-dwplot(PLC4_mod, effects='fixed',whisker_args = list(color = "blue"),
-                  dot_args = list(color = "black") )+geom_vline(xintercept=0,lty=2)+
-  scale_y_discrete(labels= c('hcmas'='Massive HC','cru_or_spoenc'='CCA'))
-
-PLC16_mod<-glmmTMB(PLC16_mod_sum$call$formula,data=glmm_table4,family=Gamma('log'))
-
-PLC16_mod_sum<-summary(PLC16_mod)
-PLC16_coef<-dwplot(PLC16_mod, effects='fixed',whisker_args = list(color = "orange"),
-                   dot_args = list(color = "black"))+geom_vline(xintercept=0,lty=2)+
-scale_y_discrete(labels=c('cru_or_spoenc' = 'CCA',
-                          'ma' = 'MA'))
-
-
-PLC32_mod<-glmmTMB(PLC32_mod_sum$call$formula,data=glmm_table3,family=gaussian())
-PLC32_mod_sum<-summary(PLC32_mod)
-PLC32_coef<-dwplot(PLC32_mod, effects='fixed',whisker_args = list(color = "red"),
-                   dot_args = list(color = "black"))+geom_vline(xintercept=0,lty=2)+
-  scale_y_discrete(labels=c('fil' = 'TU'))
-
-D12_mod<-glmmTMB(D12_mod_sum$call$formula,data=glmm_table5,family=Gamma('log'))
-D12_mod_sum<-summary(D12_mod)
-D12_coef<-dwplot(D12_mod, effects='fixed',whisker_args = list(color = "blue"),
-                 dot_args = list(color = "black"))+geom_vline(xintercept=0,lty=2)+
-  scale_y_discrete(labels=c('hcarb' = 'Arborescent HC',
-                            'hcbus' = 'Bushy HC',
-                            'ocbus' = 'Bushy OC',
-                            'hcfol' = 'Foliose HC',
-                            'hcenc' = 'Encrusting HC',
-                            'us' = 'US',
-                            'zoamas' = 'Massive ZO'))
-
-
-D24_mod<-glmmTMB(D24_mod_sum$call$formula,data=glmm_table6,family=Gamma('log'))
-D24_mod_sum<-summary(D24_mod)
-D24_coef<-dwplot(D24_mod, effects='fixed',whisker_args = list(color = "blue"),
-       dot_args = list(color = "black"))+geom_vline(xintercept=0,lty=2)+
-  scale_y_discrete(labels=c('hcarb' = 'Arborescent HC',
-                            'hcbus' = 'Bushy HC',
-                            'ocbus' = 'Bushy OC',
-                            'hcfol' = 'Foliose HC',
-                            'fil' = 'TU',
-                            'cru_or_spoenc' = 'CCA'))
-
-
-D816_mod<-glmmTMB(D816_mod_sum$call$formula,data=glmm_table8,family=Gamma('log'))
-D816_mod_sum<-summary(D816_mod)
-D816_coef<-dwplot(D816_mod, effects='fixed',whisker_args = list(color = "orange"),
-       dot_args = list(color = "black"))+geom_vline(xintercept=0,lty=2)+
-  scale_y_discrete(labels=c('cru_or_spoenc' = 'CCA',
-                            'zoamas' = 'Massive ZO',
-                            'hcfol' = 'Foliose HC',
-                            'fil' = 'TU',
-                            'ocdig' = 'Digitate OC'))
-
-D1632_mod<-glmmTMB(D1632_mod_sum$call$formula,data=glmm_table9,family=gaussian())
-D1632_mod_sum<-summary(D1632_mod)
-D1632_coef<-dwplot(D1632_mod, effects='fixed',whisker_args = list(color = "orange"),
-       dot_args = list(color = "black"))+geom_vline(xintercept=0,lty=2)+
- scale_y_discrete(labels=c('cru_or_spoenc' = 'CCA'))
-ggsave('Figures/NewVIF_D1632_coef.jpg',  D1632_coef,
-      width=1000, height=750, units='px')
-D3264_mod<-glmmTMB(D3264_mod_sum$call$formula,data=glmm_table10,family=gaussian())
-D3264_mod_sum<-summary(D3264_mod)
-D3264_coef<-dwplot(D3264_mod, effects='fixed',whisker_args = list(color = "red"),
-                   dot_args = list(color = "black"))+geom_vline(xintercept=0,lty=2)+
- scale_y_discrete(labels=c('cru_or_spoenc' = 'CCA',
-                           'hcmas' = 'Massive HC'))
-
-VRSD_mod<-glmmTMB(VRSD_mod_sum$call$formula,data=glmm_table11,family=gaussian())
-##Combine all plots
-library(ggpubr)
-coef_plot<-ggarrange(V4_coef, PLC4_coef, D12_coef, D24_coef,
-                          PLC16_coef, D816_coef, D1632_coef,
-                          PROC32_coef, PLC32_coef, D3264_coef,
-                          
-          labels=c('VRM - 4 cm', 'PLC - 4 cm', 'D (1 - 2 cm)',
-                   'D (2 - 4 cm)','PLC - 16 cm', 'D (8 - 16 cm)', 'D (16 - 32 cm)',
-                   'PROC - 32 cm', 'PLC - 32 cm', 'D (32 - 64 cm)'
-                   ),
-          font.label = list(size = 10, color = "black", face = "bold", family = NULL),
-          ncol=2, nrow=5,vjust=1.2,
-          align='hv')
-coef_plot
-
-
-
-```
-
-### Showing the mean value and 95% CI of each coefficient in GLMMs. ###
-
-```{r show coefficients and 95%CI}
-####################Show CI and coefficients of every model#################################
-#V4
-V4_CI<-confint(V4_mod)[-nrow(confint(V4_mod)),]
-stats_table <- as.data.frame(V4_mod_sum$coefficients$cond)
-stats_table_V4<-cbind(
-  row.names(stats_table),
-  stats_table, V4_CI[,-3]
-)
-colnames(stats_table_V4) <- c(
-  "Term", "B", "SE", "t", "p",
-  "CI_lower", "CI_upper")
-stats_table_V4$Term<-c('Intercept','Bushy HC', 'Filamentous algae', 
-        'Bushy OC', 'CCA', 'Arborescent HC', 'Massive Zoanthids' )
-stats_table_V4
-PROC32_CI<-confint(PROC32_mod)[-nrow(confint(PROC32_mod)),]
-stats_table <- as.data.frame(PROC32_mod_sum$coefficients$cond)
-stats_table_PROC32<-cbind(
-  row.names(stats_table),
-  stats_table, PROC32_CI[,-3]
-)
-colnames(stats_table_PROC32) <- c(
-  "Term", "B", "SE", "t", "p",
-  "CI_lower", "CI_upper")
-stats_table_PROC32$Term<-c('Intercept','CCA', 'Massive HC', 
-                       'Filamentous algae' )
-stats_table_PROC32
-#PLC4
-PLC4_CI<-confint(PLC4_mod)[-nrow(confint(PLC4_mod)),]
-stats_table <- as.data.frame(PLC4_mod_sum$coefficients$cond)
-stats_table_PLC4<-cbind(
-  row.names(stats_table),
-  stats_table, PLC4_CI[,-3]
-)
-colnames(stats_table_PLC4) <- c(
-  "Term", "B", "SE", "t", "p",
-  "CI_lower", "CI_upper")
-stats_table_PLC4$Term<-c('Intercept','Massive HC', 
-                           'CCA' )
-stats_table_PLC4
-#PLC16
-PLC16_CI<-confint(PLC16_mod)[-nrow(confint(PLC16_mod)),]
-stats_table <- as.data.frame(PLC16_mod_sum$coefficients$cond)
-stats_table_PLC16<-cbind(
-  row.names(stats_table),
-  stats_table, PLC16_CI[,-3]
-)
-colnames(stats_table_PLC16) <- c(
-  "Term", "B", "SE", "t", "p",
-  "CI_lower", "CI_upper")
-stats_table_PLC16$Term<-c('Intercept','CCA', 
-                         'Macroalgae' )
-stats_table_PLC16
-
-#PLC32
-PLC32_CI<-confint(PLC32_mod)[-nrow(confint(PLC32_mod)),]
-stats_table <- as.data.frame(PLC32_mod_sum$coefficients$cond)
-stats_table_PLC32<-cbind(
-  row.names(stats_table),
-  stats_table, PLC32_CI[,-3]
-)
-colnames(stats_table_PLC32) <- c(
-  "Term", "B", "SE", "t", "p",
-  "CI_lower", "CI_upper")
-stats_table_PLC32$Term<-c('Intercept','Filamentous algae' )
-
-stats_table_PLC32
-
-#D12
-D12_CI<-confint(D12_mod)[-nrow(confint(D12_mod)),]
-stats_table <- as.data.frame(D12_mod_sum$coefficients$cond)
-stats_table_D12<-cbind(
-  row.names(stats_table),
-  stats_table, D12_CI[,-3]
-)
-colnames(stats_table_D12) <- c(
-  "Term", "B", "SE", "t", "p",
-  "CI_lower", "CI_upper")
-stats_table_D12$Term<-c('Intercept','Arborescent HC','Bushy HC', 'Bushy OC',
-                        'Foliose HC', 'Encrusting HC', 'US', 'Massive zoanthids')
-
-stats_table_D12
-
-#D24
-D24_CI<-confint(D24_mod)[-nrow(confint(D24_mod)),]
-stats_table <- as.data.frame(D24_mod_sum$coefficients$cond)
-stats_table_D24<-cbind(
-  row.names(stats_table),
-  stats_table, D24_CI[,-3]
-)
-colnames(stats_table_D24) <- c(
-  "Term", "B", "SE", "t", "p",
-  "CI_lower", "CI_upper")
-stats_table_D24$Term<-c('Intercept','Arborescent HC','Bushy HC', 'Bushy OC',
-                        'Foliose HC', 'Filamentous algae', 'CCA')
-
-stats_table_D24
-
-#D816
-D816_CI<-confint(D816_mod)[-nrow(confint(D816_mod)),]
-stats_table <- as.data.frame(D816_mod_sum$coefficients$cond)
-stats_table_D816<-cbind(
-  row.names(stats_table),
-  stats_table, D816_CI[,-3]
-)
-colnames(stats_table_D816) <- c(
-  "Term", "B", "SE", "t", "p",
-  "CI_lower", "CI_upper")
-stats_table_D816$Term<-c('Intercept','CCA','Foliose HC', 'Massive zoanthids',
-                         'Filamentous algae', 'Digitate OC')
-
-stats_table_D816
-
-#D1632
-D1632_CI<-confint(D1632_mod)[-nrow(confint(D1632_mod)),]
-stats_table <- as.data.frame(D1632_mod_sum$coefficients$cond)
-stats_table_D1632<-cbind(
-  row.names(stats_table),
-  stats_table, D1632_CI[,-3]
-)
-colnames(stats_table_D1632) <- c(
-  "Term", "B", "SE", "t", "p",
-  "CI_lower", "CI_upper")
-stats_table_D1632$Term<-c('Intercept','CCA')
-
-stats_table_D1632
-
-#D3264
-D3264_CI<-confint(D3264_mod)[-nrow(confint(D3264_mod)),]
-stats_table <- as.data.frame(D3264_mod_sum$coefficients$cond)
-stats_table_D3264<-cbind(
-  row.names(stats_table),
-  stats_table, D3264_CI[,-3]
-)
-colnames(stats_table_D3264) <- c(
-  "Term", "B", "SE", "t", "p",
-  "CI_lower", "CI_upper")
-stats_table_D3264$Term<-c('Intercept', 'CCA', 'Massive HC')
-
-stats_table_D3264
-
-#Sq
-VRSD_CI<-confint(VRSD_mod)[-nrow(confint(VRSD_mod)),]
-stats_table <- as.data.frame(VRSD_mod_sum$coefficients$cond)
-VRSD_CI<-as.data.frame(VRSD_CI)
-stats_table_VRSD<-cbind(
-  row.names(stats_table),
-  stats_table, t(VRSD_CI[-3,])
-)
-colnames(stats_table_VRSD) <- c(
-  "Term", "B", "SE", "t", "p",
-  "CI_lower", "CI_upper")
-stats_table_VRSD$Term<-c('Intercept')
-
-stats_table_VRSD
-
-
-
-```
-
-### Examining the GLMMs (pseudo-Rsquare and model diagnistic) ###
-```{r model inspection, warning=F, message=F}
-############################Check pseudo R2##########################################
-
-library(MuMIn)
-pseudo_r2_table<-as.data.frame(matrix( ncol=2,  nrow=11))
-row.names(pseudo_r2_table)<-c('VRM - 4 cm', 
-                              'PROC - 32 cm',
-                              'PLC - 4 cm',
-                              'PLC - 16 cm',
-                              'PLC - 32 cm',
-                              'D(1 - 2 cm)',
-                              'D(2 - 4 cm)',
-                              'D(8 - 16 cm)',
-                              'D(16 - 32 cm)',
-                              'D(32 - 64 cm)',
-                              'Sq')
-pseudo_r2_table[1,]<-round(r.squaredGLMM(V4_mod), 4) #model with best conditional R2
-pseudo_r2_table[2,]<-round(r.squaredGLMM(PROC32_mod)[1,], 4)
-pseudo_r2_table[3,]<-round(r.squaredGLMM(PLC4_mod),4)
-pseudo_r2_table[4,]<-round(r.squaredGLMM(PLC16_mod)[1,], 4) 
-pseudo_r2_table[5,]<-round(r.squaredGLMM(PLC32_mod), 4)#The least explained model
-pseudo_r2_table[6,]<-round(r.squaredGLMM(D12_mod)[1,],4)
-pseudo_r2_table[7,]<-round(r.squaredGLMM(D24_mod)[1,],4)# The second best-explained model
-pseudo_r2_table[8,]<-round(r.squaredGLMM(D816_mod)[1,],4)
-pseudo_r2_table[9,]<-round(r.squaredGLMM(D1632_mod),4)
-pseudo_r2_table[10,]<-round(r.squaredGLMM(D3264_mod),4)
-pseudo_r2_table[11,]<-round(r.squaredGLMM(VRSD_mod),4)
-colnames(pseudo_r2_table)<-c('Marginal R squared', 'Constrained R squared')
-#Save tables
-library(gt)
-library(rempsyc)
-pseudo_r2_table$Indicator<-row.names(pseudo_r2_table)
-pseudo_r2_table<-dplyr::select(pseudo_r2_table, Indicator, `Marginal R squared`, `Constrained R squared`)
-pseudo_r2_nice<-gt(pseudo_r2_table)
-
-pseudo_r2_nice
-gtsave(pseudo_r2_nice, 'Figures/PseudoR2.docx')
-######################Model diagniostics################################
-
-library(DHARMa)
-library(SuppDists)
-
-
-V4_resi<-simulateResiduals(V4_mod)
-
-plot(V4_resi, sub='VRM - 4 cm model diagnosis')
-
-PROC32_resi<-simulateResiduals(PROC32_mod)
-
-plot(PROC32_resi, sub='PROC - 32 cm model diagnosis')
-
-PLC4_resi<-simulateResiduals(PLC4_mod)
-
-plot(PLC4_resi, sub='PLC - 4 cm model diagnosis')
-
-PLC16_resi<-simulateResiduals(PLC16_mod)
-
-plot(PLC16_resi, sub='PLC - 16 cm model diagnosis')
-
-PLC32_resi<-simulateResiduals(PLC32_mod)
-
-plot(PLC32_resi, sub='PLC - 32 cm model diagnosis')
-
-D12_resi<-simulateResiduals(D12_mod)
-
-plot(D12_resi, sub='D (1 - 2 cm) model diagnosis')
-
-D24_resi<-simulateResiduals(D24_mod)
-
-plot(D24_resi, sub='D (2 - 4 cm) model diagnosis')
-
-D816_resi<-simulateResiduals(D816_mod)
-
-plot(D816_resi, sub='D (8 - 16 cm) model diagnosis')
-
-D1632_resi<-simulateResiduals(D1632_mod)
-
-plot(D1632_resi, sub='D (16 - 32 cm) model diagnosis')
-
-D3264_resi<-simulateResiduals(D3264_mod)
-
-plot(D3264_resi, sub='D (32 - 64 cm) model diagnosis')
-
-VRSD_resi<-simulateResiduals(VRSD_mod)
-
-plot(VRSD_resi, sub='Sq model diagnosis')
-
-
-
-
-
-
-
-```
-
-
-
 
