--- a/Data_Analysis_Script.Rmd
+++ b/Data_Analysis_Script.Rmd
@@ -1464,7 +1464,7 @@ rda_aov
 
 #Check significance by terms
 rda_aov_term<-anova.cca(rda_mod, by='term',
-          step=999)
+          permutations = how(nperm=999))
 rda_aov_term
 
 #Check significance of the whole constrained model
