--- a/Data_Analysis_Script.Rmd
+++ b/Data_Analysis_Script.Rmd
@@ -1474,6 +1474,87 @@ rda_aov_all
 #Significantly tells the variation
 
 
+#######################################
+#######OrdiR2Step Again###############################
+fwd_sel<-ordiR2step(rda(rda_table[,c(15:25)]~1, data=rda_table[,1:14]), # lower model limit (simple!)
+           scope = formula(rda_mod), # upper model limit (the "full" model)
+           direction = "forward",
+           R2scope = TRUE, # can't surpass the "full" model's R2
+           pstep = 999,
+           trace = FALSE)# change to TRUE to see the selection process!
+
+rda_mod_summary<-summary(fwd_sel) 
+RsquareAdj(fwd_sel) #Adjusted R2 = 23.83%
+
+ordiplot(fwd_sel,type='n',
+         xlab=paste('RDA1, ', 
+                    round(rda_mod_summary$concont$importance[2,1]*100, 2), '%'),
+         ylab=paste('RDA2, ',round(rda_mod_summary$concont$importance[2,2]*100, 2), '%'),
+         scaling=3,
+         cex=1.5)
+
+title(main='Redundancy Analysis',
+      sub='Variable selection by foward selection')
+
+rda_sc<-scores(fwd_sel,choice=1:2,
+               display='sp',
+               scaling=3)
+
+
+arrows(x0=0, y0=0,
+       x1=rda_sc[,1],
+       y1=rda_sc[,2],
+       length=0,
+       lty=1,
+       lwd=1.5,
+       col='red')
+rda_sc1<-scores(rda_mod,choice=1:2,
+                display='site',
+                scaling=3)
+rda_sc1[which(rda_sc1<0)]<-rda_sc1[which(rda_sc1<0)]-0.06
+rda_sc1[which(rda_sc1>0)]<-rda_sc1[which(rda_sc1>0)]+0.04
+text(x=rda_sc[,1],
+     y=rda_sc[,2],
+     c('VRM - 4 cm', 'PLC - 4 cm', 'PROC - 32 cm', 'PLC - 32 cm',
+       'PLC - 16 cm', 'D (1 - 2 cm)', 'D (2 - 4 cm)', 'D (8 - 16 cm)',
+       'D (16 - 32 cm)', 'D (32 - 64 cm)',  'Sq'),
+     cex=0.8, col= 'black')
+
+rda_sc2<-scores(fwd_sel,choice=1:2,
+                scaling=2,
+                display = 'bp')
+text(x=rda_sc2[1,1],
+     y=rda_sc2[1,2],
+     'CCA',
+     cex=1,
+     col='black')
+text(x=rda_sc2[2,1],
+     y=rda_sc2[2,2],
+     'Bushy  HC',
+     cex=1,
+     col='black')
+text(x=rda_sc2[3,1],
+     y=rda_sc2[3,2],
+     'Enxrusting ZO',
+     cex=1,
+     col='black')
+
+ordihull(fwd_sel, 
+         groups= groups,
+         draw='polygon',
+         scaling=3,
+         alpha=0.4,
+         col=my_cols,
+         border = NA)
+fwd_aov<-anova.cca(fwd_sel, by='axis',
+                   permutations = how(nperm=999))
+
+fwd_aov_term<-anova.cca(fwd_sel, by='term',
+                        permutations = how(nperm=999))
+
+fwd_aov_all<-anova.cca(fwd_sel,permutations = how(nperm=999))
+
+
 ```
 
 ```{r Varpart}
